Update remote_user pattern with user regex

--- a/roles/ood_shib_config/tasks/main.yaml
+++ b/roles/ood_shib_config/tasks/main.yaml
@@ -66,8 +66,7 @@
         - "Require valid-user"
         - "ShibUseHeaders On"
         - "RewriteCond %{IS_SUBREQ} ^false$"
-        - "RewriteCond %{HTTP:REMOTE_USER} '([a-zA-Z0-9_.+-]+)@uab.edu$' [OR]"
-        - "RewriteCond %{HTTP:REMOTE_USER} 'urn:mace:incommon:uab.edu!https://uabgrid.uab.edu/shibboleth!(.+)$'"
+        - "RewriteCond %{HTTP:REMOTE_USER} '{{ ood_user_regex }}'"
         - "RewriteRule . - [E=REMOTE_USER:%1]"
         #- "RewriteCond %{IS_SUBREQ} ^false$"
         #- "RewriteCond %{HTTP:unscoped-affiliation} !({{ valid_eppa|join('|') }}) [NC]"
