correcting the state,a nd enabling the service

--- a/roles/install_node_exporter/tasks/main.yaml
+++ b/roles/install_node_exporter/tasks/main.yaml
@@ -19,5 +19,6 @@
 - name: Enable node_exporter.service
   systemd:
     name: node_exporter.service
-    state: enabled
+    state: started
+    enabled: true
 
