Update project name throughout code

--- a/roles/ohpc_install/files/xcbc-example.cfg
+++ b/roles/ohpc_install/files/xcbc-example.cfg
@@ -10,12 +10,12 @@
 # Account - 'test':MaxNodesPerJob=1:MaxJobs=1:MaxTRESMins=cpu=1:FairShare=1:MaxWallDuration=1:Description='Test Account':Organization='Test'
 # To add users to a account add a line like this after a Parent - 'line'
 # User - 'lipari':MaxNodesPerJob=2:MaxJobs=3:MaxTRESMins=cpu=4:FairShare=1:MaxWallDurationPerJob=1
-Cluster - 'xcbc-example':Fairshare=1:QOS='normal'
+Cluster - 'bc-example':Fairshare=1:QOS='normal'
 Parent - 'root'
 User - 'root':DefaultAccount='root':AdminLevel='Administrator':Fairshare=1
-Account - 'test':Description='test users':Organization='xsede':Fairshare=1
-Account - 'xcbc-users':Description='xsede users':Organization='xsede':Fairshare=1
+Account - 'test':Description='test users':Organization='access':Fairshare=1
+Account - 'bc-users':Description='access users':Organization='access':Fairshare=1
 Parent - 'test'
 User - 'test-user':DefaultAccount='test':Fairshare=1
-Parent - 'xcbc-users'
-User - 'jecoulte':DefaultAccount='xcbc-users':Fairshare=1
+Parent - 'bc-users'
+User - 'jecoulte':DefaultAccount='bc-users':Fairshare=1
